<!DOCTYPE resources [
    <!ENTITY app_name "Photo360">
    ]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="action_connect">Connect to turntable</string>
    <string name="action_settings">Settings</string>
    <string name="preset_name">Preset name</string>
    <string name="preset_frame">Frames number</string>
    <string name="preset_delay">Shooting delay (ms)</string>
    <string name="preset_pause">Shooting pause (ms)</string>
    <string name="delay">Delay (ms)</string>
    <string name="preset_speed">Stepper speed</string>
    <string name="preset_acceleration">Acceleration</string>
    <string name="preset_edit_form">Preset edit</string>
    <string name="settings_edit_form">Settings</string>
    <string name="shooting_mode">Shooting mode</string>
    <string name="action_save">Save</string>
    <string name="preferences_saved">Preset saved</string>
    <string name="param1_label">Frames</string>
    <string name="naw_settings">Settings</string>
    <string name="naw_save">Backup turntable</string>
    <string name="naw_restore">Restore turntable</string>
    <string name="naw_help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="turntable_wifi_ssid">Turntable WiFi SSID</string>
    <string name="turntable_wifi_password">Turntable WiFi password</string>
    <string name="motors_steps_per_circle">Motors steps per circle</string>
    <string name="start_calibrate_btn">Calibrate</string>
    <string name="stop_calibrate_btn">Stop</string>
    <string name="action_help">Help</string>
    <string name="help_locale">en</string>

    <!--string name="sam_explanation">Sam explanation of calibration process</string-->
    <string name="sam_explanation">Calibration procedure. \n\n1) Set the speed of the motor during calibration. \n2) Set the label in front of the motor shaft. \n3) Click the "CALIBRATE" button.
\n4) Wait for the label make a full turn and again will be in front of the motor shaft. Press "STOP". \n Edit value, if necessary.
</string>

    <string name="comment">Comment</string>
    <string name="too_fast_rotation">Rotation to fast for non stop mode. Please, decrees speed or frames number</string>
    <string name="backup_name">Backup name</string>
    <string name="backupDialogTitle">Backup turntable settings</string>
    <string name="no_sdcard">External SD card is inaccessible</string>
    <string name="Backup_sucsess">Backup %1$s is added</string>
    <string name="Enter_file_name">Enter backup file name</string>
    <string name="dialog_def_msg">Save presets to file</string>
    <string name="enter_backup_name">Please, enter backup file name</string>
    <string name="callibration_speed">Callibration speed</string>
    <string name="turntable_not_found">Turntable WiFi not found</string>
    <string name="storage_denied">Permission to storage denied</string>
    <string name="select_all">Select all</string>
    <string name="delete_selection">delete selection</string>
    <string name="action_selection_settings">settings</string>
    <string name="restore_select_title">selected</string>

    <string name="BackupRestoredMessage">Backup %1$s restored</string>
    <string name="restore_activity_form">Restore backup</string>
    <string name="ext_stor_perm_denied">Permission Denied, You cannot access External storage.</string>
    <string name="mode">Mode</string>
    <string name="settings_saved">Settings saved</string>
    <string name="turntable_connected">Turntable connected</string>
    <string name="turntable_disconnected">Turntable disconnected</string>

    <plurals name="Deleted_backup_message">
        <item quantity="one">Deleted %1$d backup</item>
        <item quantity="other">Deleted %1$d backups</item>
    </plurals>

    <string-array name="shootingmode_array">
        <item>Interval</item>
        <item>Non stop</item>
    </string-array>

    <!--string-array name="shootingmode_array">
        <item>Interval</item>
        <item>Ping-Pong</item>
        <item>Seria</item>
        <item>Non stop</item>
    </string-array-->
</resources>
