<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_tune"
            android:title="@string/naw_settings"/>
        <!--item
            android:id="@+id/nav_import"
            android:title=""
            app:showAsAction="always"
            app:actionLayout="@layout/import_item_layout" /--> <!-- important part -->/>
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_save"
            android:title="@string/naw_save" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_restore"
            android:title="@string/naw_restore" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/naw_help" />
    </group>

    <!--item
        android:title="@string/naw_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/naw_share"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@android:drawable/star_big_on"
                android:title="@string/naw_rate" />
        </menu>
    </item-->

</menu>