<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <EditText
                    android:id="@+id/etSSID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/turntable_wifi_ssid">
                    <requestFocus>
                    </requestFocus>
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="left"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/turntable_wifi_password"
                    android:inputType="textVisiblePassword">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txtCalibrExplanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/shooting_mode"
                android:padding ="12dp"
                android:text="@string/sam_explanation">

            </TextView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1"
                android:layout_gravity="left">
                <EditText
                    android:id="@+id/et_callSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/callibration_speed"
                    android:inputType="number">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1"
                android:layout_gravity="left">
                <EditText
                    android:id="@+id/et_allSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/motors_steps_per_circle"
                    android:inputType="number">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/calibrate_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:height="@android:dimen/notification_large_icon_height"
                android:elevation="5dp"
                android:text="@string/start_calibrate_btn" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

